Added gui registry, bug fixes